State Save: QSORT Halts ... on kroger platform using kvm-tool

--- a/tools/kvm/Makefile
+++ b/tools/kvm/Makefile
@@ -183,7 +183,8 @@ WARNINGS += -Wwrite-strings
 
 CFLAGS	+= $(WARNINGS)
 
-all: $(PROGRAM) $(LIBRARY) $(GUEST_INIT)
+#all: $(PROGRAM) $(LIBRARY) $(GUEST_INIT)
+all: $(LIBRARY) $(GUEST_INIT)
 
 KVMTOOLS-VERSION-FILE:
 	@$(SHELL_PATH) util/KVMTOOLS-VERSION-GEN $(OUTPUT)
