WIP: GDB Server Partially Working -- 3
Control Returns to GDB after first instruction execution

Some mysterious instructions enable the single stepping at application main() call

--- a/tools/kvm/Makefile
+++ b/tools/kvm/Makefile
@@ -88,6 +88,7 @@ OBJS	+= hw/i8042.o
 OBJS	+= hw/pci-shmem.o
 OBJS	+= kvm-ipc.o
 OBJS	+= gdb_srv.o
+OBJS	+= gdb_srv_arch.o
 
 FLAGS_BFD := $(CFLAGS) -lbfd
 has_bfd := $(call try-cc,$(SOURCE_BFD),$(FLAGS_BFD))
