WIP: State Save; CPU#1 Blocked in Guest Mode; Need to Find a Way to do Kick it Correctly

--- a/tools/kvm/Makefile
+++ b/tools/kvm/Makefile
@@ -6,8 +6,8 @@ WERROR=0
 
 ifeq ($(strip $(V)),)
 	E = @echo
-	Q = @
-#	Q =
+#	Q = @
+	Q =
 else
 	E = @\#
 	Q =
@@ -163,7 +163,8 @@ DEFINES	+= -DKVMTOOLS_VERSION='"$(KVMTOOLS_VERSION)"'
 
 KVM_INCLUDE := include
 SYSTEMC_INCLUDE := /home/hamayun/workspace/NaSiK/hw/components/kvm_wrapper_2
-CFLAGS	+= $(CPPFLAGS) $(DEFINES) -I$(KVM_INCLUDE) -I../../include -I../../arch/$(ARCH)/include/ -Os -g
+#CFLAGS	+= $(CPPFLAGS) $(DEFINES) -I$(KVM_INCLUDE) -I../../include -I../../arch/$(ARCH)/include/ -Os -g
+CFLAGS	+= $(CPPFLAGS) $(DEFINES) -I$(KVM_INCLUDE) -I../../include -I../../arch/$(ARCH)/include/ -O0 -g
 CFLAGS	+= -I$(SYSTEMC_INCLUDE)
 
 ifneq ($(WERROR),0)
